--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Spring Security Example</title>
+    <title>User info</title>
 </head>
-<body>
-<h1>User, welcome spring boot security page!</h1>
-
-
+<div>
+    <table border="1" cellspacing="0" cellpadding="3" style="text-align: center; vertical-align: middle;">
+        <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Lastname</th>
+            <th>Email</th>
+            <th>Login</th>
+            <th>Role</th>
+        </tr>
+        <tr>
+            <td th:utext="${user.id}">...</td>
+            <td th:utext="${user.name}">...</td>
+            <td th:utext="${user.lastname}">...</td>
+            <td th:utext="${user.email}">...</td>
+            <td th:utext="${user.login}">...</td>
+            <td th:utext="${user.roles}">...</td>
+        </tr>
+    </table>
+</div>
+<a href=/logout">Logout</a>
+</form>
 </body>
 </html>
