--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <title>User info</title>
 </head>
@@ -23,7 +23,7 @@
         </tr>
     </table>
 </div>
-<a href=/logout">Logout</a>
+<a href="/logout">Logout</a>
 </form>
 </body>
 </html>
