--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>User info</title>
+    <title>User page</title>
 </head>
 <div>
     <table border="1" cellspacing="0" cellpadding="3" style="text-align: center; vertical-align: middle;">
         <tr>
             <th>ID</th>
-            <th>Name</th>
-            <th>Lastname</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Age</th>
             <th>Email</th>
             <th>Login</th>
             <th>Role</th>
@@ -17,6 +18,7 @@
             <td th:utext="${user.id}">...</td>
             <td th:utext="${user.name}">...</td>
             <td th:utext="${user.lastname}">...</td>
+            <td th:utext="${user.age}">...</td>
             <td th:utext="${user.email}">...</td>
             <td th:utext="${user.login}">...</td>
             <td th:utext="${user.roles}">...</td>
@@ -24,6 +26,5 @@
     </table>
 </div>
 <a href="/logout">Logout</a>
-</form>
 </body>
 </html>
