--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,30 +1,80 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <title>User page</title>
 </head>
-<div>
-    <table border="1" cellspacing="0" cellpadding="3" style="text-align: center; vertical-align: middle;">
-        <tr>
-            <th>ID</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Age</th>
-            <th>Email</th>
-            <th>Login</th>
-            <th>Role</th>
-        </tr>
-        <tr>
-            <td th:utext="${user.id}">...</td>
-            <td th:utext="${user.name}">...</td>
-            <td th:utext="${user.lastname}">...</td>
-            <td th:utext="${user.age}">...</td>
-            <td th:utext="${user.email}">...</td>
-            <td th:utext="${user.login}">...</td>
-            <td th:utext="${user.roles}">...</td>
-        </tr>
-    </table>
+<body class="bg-light">
+<nav class="navbar navbar-dark bg-dark">
+    <div th:each="role: ${user.roles}">
+        <b><span class="navbar-brand text-white" th:utext="${user.login}">login</span></b>
+        <span class="navbar-brand text-white" style="margin-left: -15px;" th:utext="' with role: ' + ${role.toString()}">with role: User</span>
+    </div>
+    <form class="form-inline">
+        <a class="text-light" href="/logout">Logout</a>
+    </form>
+</nav>
+<div class="container-fluid">
+    <div class="row vh-100" style="padding-top: 15px;">
+        <div class="col-2 bg-white" style="padding: 0;" th:each="role: ${user.roles}">
+            <nav class="nav flex-column nav-pills">
+                <a class="nav-link" th:if="${role.toString()}=='ADMIN'" href="/admin">Admin</a>
+                <a class="nav-link active" href="/user">User</a>
+            </nav>
+        </div>
+        <div class="col-10 bg-light" style="padding: 0 30px">
+            <h1>User information-page</h1>
+            <div class="card">
+                <div class="card-header">
+                    <h5>About user</h5>
+                </div>
+                <div class="card-body">
+                    <div class="card-title">
+                        <div class="card-text">
+                            <table class="table">
+                                <tr>
+                                    <th>ID</th>
+                                    <th>First Name</th>
+                                    <th>Last Name</th>
+                                    <th>Age</th>
+                                    <th>EMail</th>
+                                    <th>Login</th>
+                                    <th>Role</th>
+                                </tr>
+                                <tr class="bg-light" th:each="role: ${user.roles}">
+                                    <td th:utext="${user.id}">...</td>
+                                    <td th:utext="${user.name}">...</td>
+                                    <td th:utext="${user.lastname}">...</td>
+                                    <td th:utext="${user.age}">...</td>
+                                    <td th:utext="${user.email}">...</td>
+                                    <td th:utext="${user.login}">...</td>
+                                    <td th:utext="${role.toString()}">...</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<a href="/logout">Logout</a>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
