--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -13,19 +13,16 @@
 </head>
 <body class="bg-light">
 <nav class="navbar navbar-dark bg-dark">
-    <div th:each="role: ${user.roles}">
-        <b><span class="navbar-brand text-white" th:utext="${user.login}">login</span></b>
-        <span class="navbar-brand text-white" style="margin-left: -15px;" th:utext="' with role: ' + ${role.toString()}">with role: User</span>
-    </div>
+    <span id="headerSpan"></span>
     <form class="form-inline">
         <a class="text-light" href="/logout">Logout</a>
     </form>
 </nav>
 <div class="container-fluid">
     <div class="row vh-100" style="padding-top: 15px;">
-        <div class="col-2 bg-white" style="padding: 0;" th:each="role: ${user.roles}">
+        <div class="col-2 bg-white" style="padding: 0;">
             <nav class="nav flex-column nav-pills">
-                <a class="nav-link" th:if="${role.toString()}=='ADMIN'" href="/admin">Admin</a>
+                <span id="adminButton"><a class="nav-link" href="/admin">Admin</a></span>
                 <a class="nav-link active" href="/user">User</a>
             </nav>
         </div>
@@ -41,22 +38,14 @@
                             <table class="table">
                                 <tr>
                                     <th>ID</th>
+                                    <th>Login</th>
                                     <th>First Name</th>
                                     <th>Last Name</th>
                                     <th>Age</th>
                                     <th>EMail</th>
-                                    <th>Login</th>
                                     <th>Role</th>
                                 </tr>
-                                <tr class="bg-light" th:each="role: ${user.roles}">
-                                    <td th:utext="${user.id}">...</td>
-                                    <td th:utext="${user.name}">...</td>
-                                    <td th:utext="${user.lastname}">...</td>
-                                    <td th:utext="${user.age}">...</td>
-                                    <td th:utext="${user.email}">...</td>
-                                    <td th:utext="${user.login}">...</td>
-                                    <td th:utext="${role.toString()}">...</td>
-                                </tr>
+                                <tbody id="tableUserInfo"></tbody>
                             </table>
                         </div>
                     </div>
@@ -66,6 +55,7 @@
     </div>
 </div>
 <!-- Optional JavaScript -->
+<script type="text/javascript" src="/user.js"></script>
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
